Character data style changes

--- a/css/themes/dark2.css
+++ b/css/themes/dark2.css
@@ -1364,8 +1364,18 @@ optgroup {
     left: -10px;
     width: 150px;
     display: none;
+    padding: 3px;
 }
 
-.character-data a{
-    color:white;
-}
+    .character-data > div:first-child {
+        border-bottom: 1px solid white;
+        text-align: center;
+    }
+
+    .character-data > div:nth-child(2) {
+        padding-top: 5px;
+    }
+
+    .character-data a {
+        color: white;
+    }
