--- a/css/style.css
+++ b/css/style.css
@@ -1377,18 +1377,23 @@ optgroup {
     left: -10px;
     width: 150px;
     display: none;
-    padding: 3px;
 }
 
-.character-data > div:first-child{
-    border-bottom: 1px solid white;
-    text-align: center;
-}
+    .character-data > div:first-child {
+        border-top: unset;
+        text-align: center;
+        padding: 4px;
+    }
 
-    .character-data > div:nth-child(2) {
-        padding-top: 5px;
+    .character-data > div:not(:first-child) {
+        padding: 3px;
     }
 
 .character-data a{
     color:white;
+}
+
+#moveSource {
+    padding: 2px 0px;
+    font-weight: 600;
 }
