--- a/css/themes/dark2.css
+++ b/css/themes/dark2.css
@@ -1364,18 +1364,23 @@ optgroup {
     left: -10px;
     width: 150px;
     display: none;
-    padding: 3px;
 }
 
     .character-data > div:first-child {
-        border-bottom: 1px solid white;
+        border-top: unset;
         text-align: center;
+        padding: 4px;
     }
 
-    .character-data > div:nth-child(2) {
-        padding-top: 5px;
+    .character-data > div:not(:first-child) {
+        padding: 3px;
     }
 
     .character-data a {
         color: white;
     }
+
+#moveSource {
+    padding: 2px 0px;
+    font-weight: 600;
+}
