--- a/css/style.css
+++ b/css/style.css
@@ -1397,3 +1397,19 @@ optgroup {
     padding: 2px 0px;
     font-weight: 600;
 }
+
+#luma-data > div.character-select {
+    border: none;
+    color: white;
+    background: none;
+    position: relative;
+    left: 30px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 12px;
+    width: 190px;
+    text-align: center;
+    text-align-last: center;
+    width: 100%;
+    background: black;
+}
